@@ -90,6 +90,10 @@ Number of bits to use for each sample (e.g. 8 bits or 16 bits)
 .TP
 .I channel
 Number of channels to record (e.g. 1 for mono, 2 for stereo)
+.TP
+.I jackClientName
+The name of the jack input channel created by darkice if device=jack
+is specified.
 
 .PP
 .B [icecast-x]
